--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ deploy:
   - "node-http-macos"
   skip_cleanup: true
   draft: true
-script: bash node-http-linux
+script: chmod 777 node-http-linux && ./node-http-linux
