--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ deploy:
   provider: releases
   api_key: $GIT_OAUTH
   file: 
-  - "node-http-win"
+  - "node-http-win.exe"
   - "node-http-linux"
   - "node-http-macos"
   skip_cleanup: true
